# margo

./: .gitignore  LICENSE  README.md  build-linux.sh  install.sh  run-backend.sh  run-frontend.sh  run.sh
backend/: .env.example  README.md  ai_service.py  chat_storage.py  main.py  pyproject.toml
frontend/: README.md  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  renderer.js  styles.css
frontend/assets/: README.md
